src/test/ui/hrtb/hrtb-cache-issue-54302.stderr
error: implementation of `Deserialize` is not general enough
  --> $DIR/hrtb-cache-issue-54302.rs:19:5
   |
LL |     assert_deserialize_owned::<&'static str>(); //~ ERROR
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Deserialize<'0>` would have to be implemented for the type `&'static str`, for any lifetime `'0`
   = note: but `Deserialize<'1>` is actually implemented for the type `&str`, for some lifetime `'1`

error: aborting due to previous error

